improved readme file, added complete docker-compose