@@ -6,7 +6,6 @@ import it.milkman.challenge.route.api.RouteCalculator;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Dummy implementation of route calculator sorting by longitude
@@ -14,6 +13,6 @@ import java.util.stream.Collectors;
 public class RouteCalculatorDummyLongitudeImpl implements RouteCalculator {
     @Override
     public List<CoordinatesDto> calculateRoute(CoordinatesDto start, Set<CoordinatesDto> deliveries, CoordinatesDto end) {
-        return deliveries.stream().sorted(Comparator.comparingDouble(CoordinatesDto::longitude)).collect(Collectors.toList());
+        return deliveries.stream().sorted(Comparator.comparingDouble(CoordinatesDto::longitude)).toList();
     }
 }
